--- a/java/spring-boot-mysql/src/main/resources/application.yml
+++ b/java/spring-boot-mysql/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 swagger:
   contact:
-    name: Developer Bloke
-    url: http://www.devbloke.me.uk/
+    name: Martin Ingram
+    url: http://www.martiningram.uk/
     email: this.will.bounce@devbloke.me.uk
-  description: An example Spring Boot microservice with MySQL persistence.
+  description: An example Spring Boot microservice written in Java with MySQL persistence.
   license:
     type: License Type
     url: http://license.url/
@@ -15,9 +15,9 @@ swagger:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost/examples?useSSL:false&requireSSL:false
-    username: examples
-    password: 3x4mpl35
+    url: jdbc:mysql://localhost/userdb?useSSL:false&requireSSL:false
+    username: dbuser
+    password: userpass
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
     show-sql: true
