--- a/java/spring-boot-mysql/src/main/resources/application.yml
+++ b/java/spring-boot-mysql/src/main/resources/application.yml
@@ -1,24 +1,21 @@
 swagger:
+  title: Java Spring Boot MySQL
+  description: An example Spring Boot microservice written in Java with MySQL persistence.
+  version: 1.0
+  regex: /api/.*
   contact:
     name: Martin Ingram
     url: http://www.martiningram.uk/
     email: this.will.bounce@devbloke.me.uk
-  description: An example Spring Boot microservice written in Java with MySQL persistence.
-  license:
-    type: License Type
-    url: http://license.url/
-  regex: /api/.*
-  tos:
-    url: http://termsofservice.url/
-  title: Spring Boot MySQL
-  version: 1.0
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost/userdb?useSSL:false&requireSSL:false
+    url: jdbc:mysql://localhost/userdb
     username: dbuser
     password: userpass
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
     show-sql: true
     hibernate.ddl-auto: none
+    hibernate.connection.useSSL: false
+    hibernate.connection.requireSSL: false
