--- a/java/spring-boot-mysql/pom.xml
+++ b/java/spring-boot-mysql/pom.xml
@@ -8,7 +8,7 @@
   <packaging>jar</packaging>
 
   <name>Spring Boot MySQL Example</name>
-  <url>http://www.devbloke.me.uk/spring-boot-mysql</url>
+  <url>http://www.martiningram.uk/spring-boot-mysql</url>
 
   <parent>
     <groupId>com.meridal.examples</groupId>
@@ -36,6 +36,7 @@
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
+      <scope>runtime</scope>
     </dependency>    
     
     <dependency>
@@ -46,32 +47,19 @@
     <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
-      <scope>test</scope>
     </dependency>
-    
+
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
-    </dependency>
-        
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
 
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-test</artifactId>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
       <scope>test</scope>
     </dependency>
-    
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-test</artifactId>
-      <scope>test</scope>
-    </dependency>                  
     
   </dependencies>
 
