--- a/java/spring-boot-dynamodb/pom.xml
+++ b/java/spring-boot-dynamodb/pom.xml
@@ -34,14 +34,15 @@
     </dependency>
 
     <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk-dynamodb</artifactId>
+      <version>1.11.986</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.github.derjust</groupId>
       <artifactId>spring-data-dynamodb</artifactId>
       <version>5.1.0</version>
-    </dependency>
-    
-    <dependency>
-      <groupId>org.yaml</groupId>
-      <artifactId>snakeyaml</artifactId>
     </dependency>
 
     <dependency>
@@ -49,37 +50,18 @@
       <artifactId>commons-lang</artifactId>
       <scope>test</scope>
     </dependency>
-          
+
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
-      <scope>test</scope>
-    </dependency>
-    
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
-    </dependency>
-        
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <scope>test</scope>
     </dependency>
 
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-test</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
-    
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-test</artifactId>
-      <scope>test</scope>
-    </dependency>        
-    
+
   </dependencies>
 
   <build>
