--- a/java/spring-boot-rabbitmq/spring-boot-rabbitmq-subscriber/pom.xml
+++ b/java/spring-boot-rabbitmq/spring-boot-rabbitmq-subscriber/pom.xml
@@ -16,10 +16,25 @@
   </parent>
 
   <dependencies>
-  
+
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <groupId>com.meridal.examples</groupId>
+      <artifactId>rabbitmq-domain</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-boot-starter</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-amqp</artifactId>
     </dependency>
 
     <dependency>
