--- a/java/spring-boot-rabbitmq/spring-boot-rabbitmq-subscriber/src/main/resources/application.yml
+++ b/java/spring-boot-rabbitmq/spring-boot-rabbitmq-subscriber/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8081
+
 spring:
   rabbitmq:
     host: localhost
@@ -9,8 +12,8 @@ messaging:
   queue: example-queue
 
 swagger:
-  title: Java Spring Boot RabbitMQ Publisher
-  description: An example Spring Boot microservice written in Java that publishes to RabbitMQ.
+  title: Java Spring Boot RabbitMQ Subscriber
+  description: An example Spring Boot microservice written in Java that subscribes to RabbitMQ.
   version: 1.0
   regex: /api/.*
   contact:
