--- a/java/pom.xml
+++ b/java/pom.xml
@@ -11,7 +11,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.4.4</version>
+    <version>2.7.6</version>
     <relativePath/>
   </parent>
   
@@ -107,6 +107,13 @@
         <type>jar</type>
         <scope>test</scope>
       </dependency>
+
+      <dependency>
+        <groupId>com.squareup.okhttp3</groupId>
+        <artifactId>mockwebserver</artifactId>
+        <version>4.9.3</version>
+        <scope>test</scope>
+      </dependency>
                   
     </dependencies>    
   
@@ -131,6 +138,7 @@
     <module>spring-boot-simple</module>
     <module>spring-webapp-freemarker</module>
     <module>testNG</module>
+    <module>twitter-proxy</module>
   </modules>
   
 </project>
