--- a/react/simple-crud-axios-mock/package.json
+++ b/react/simple-crud-axios-mock/package.json
@@ -7,6 +7,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "concurrently": "^8.2.2",
+    "http-proxy-middleware": "^2.0.6",
+    "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.22.2",
@@ -17,7 +20,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npx concurrently \"npm run start:server\" \"npm run start:client\"",
+    "start:server": "npx json-server server/db.json --port=4000",
+    "start:client": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
