--- a/android/restaurants/gradle/libs.versions.toml
+++ b/android/restaurants/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ navigationCompose = "2.7.7"
 roomRuntime = "2.6.1"
 roomCompiler = "2.6.1"
 roomKtx = "2.6.1"
+ksp = "1.9.0-1.0.13"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -44,4 +45,4 @@ androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-
+googleDevtoolsKsp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
