--- a/android/restaurants/server/package.json
+++ b/android/restaurants/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx json-server db.json --port=8080"
+    "start": "npx json-server db.json --host=0.0.0.0 --port=8080"
   },
   "author": "",
   "license": "ISC",
