--- a/java/spring-boot-solid/pom.xml
+++ b/java/spring-boot-solid/pom.xml
@@ -44,6 +44,13 @@
     </dependency>
 
     <dependency>
+      <groupId>com.inrupt.client</groupId>
+      <artifactId>inrupt-client-bom</artifactId>
+      <version>1.1.0</version>
+      <type>pom</type>
+    </dependency>
+
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>33.2.1-jre</version>
