--- a/java/pom.xml
+++ b/java/pom.xml
@@ -1,259 +1,143 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    
+<project 
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   
   <modelVersion>4.0.0</modelVersion>
-    
   <groupId>com.meridal.examples</groupId>
-    
   <artifactId>java-parent</artifactId>
-    
   <packaging>pom</packaging>
-    
   <version>1.0-SNAPSHOT</version>
-    
   <name>Java Examples</name>
-    
   
   <parent>
-        
     <groupId>org.springframework.boot</groupId>
-        
     <artifactId>spring-boot-starter-parent</artifactId>
-        
     <version>2.7.6</version>
-        
-    <relativePath/>
-      
+    <relativePath/>    
   </parent>
-    
   
   <properties>
-        
     <java.version>17</java.version>
-        
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        
-    <springfox.version>3.0.0</springfox.version>
-      
+    <springfox.version>3.0.0</springfox.version>    
   </properties>
-    
   
-  <build>
-      
-    
-    <pluginManagement>
-          
-      
+  <build>    
+    <pluginManagement>   
       <plugins>
-                      
-        
+               
         <!-- Ensure that all projects use the latest LTS JDK. -->
-                
         <plugin>
-           
-          
-          <groupId>org.apache.maven.plugins</groupId>
-                    
-          <artifactId>maven-compiler-plugin</artifactId>
-                    
+          <groupId>org.apache.maven.plugins</groupId>               
+          <artifactId>maven-compiler-plugin</artifactId>        
           <configuration>
-                        
-            <release>${java.version}</release>
-                      
-          </configuration>
-                      
-        
+            <release>${java.version}</release>           
+          </configuration>                    
         </plugin>
-                
-        
         <!-- Disable deployment, as this is a demo project. -->
-                
-        
         <plugin>
-                
-          
           <artifactId>maven-deploy-plugin</artifactId>
-                   
-          
           <configuration>
-                        
-            <skip>true</skip>
-                      
-          </configuration>
-                     
-        
+            <skip>true</skip>            
+          </configuration>           
         </plugin>
-                
-        
         <!-- Use the latest LTS version of the release plugin. -->
-                
-        
-        <plugin>
-                    
-          <artifactId>maven-release-plugin</artifactId>
-                    
-          <version>2.5.3</version>
-                  
+        <plugin>               
+          <artifactId>maven-release-plugin</artifactId>        
+          <version>2.5.3</version>          
         </plugin>
             
-      
       </plugins>
-                
-    
     </pluginManagement>
       
   </build>
-    
   <dependencyManagement>
       
-    
     <dependencies>
-                
       
       <dependency>
-                
         <groupId>com.google.guava</groupId>
-                
         <artifactId>guava</artifactId>
-                
         <version>30.1-jre</version>
               
       </dependency>
             
       <dependency>
-                
         <groupId>com.sun.jna</groupId>
-                
         <artifactId>jna</artifactId>
-                
         <version>3.0.9</version>
-                
         <scope>runtime</scope>
               
       </dependency>
             
       <dependency>
-                
         <groupId>javax.annotation</groupId>
-                
         <artifactId>javax.annotation-api</artifactId>
-                
-        <version>1.3.2</version>
-              
+        <version>1.3.2</version>             
       </dependency>
-       
 
-      
       <dependency>
-                
         <groupId>commons-lang</groupId>
-                
         <artifactId>commons-lang</artifactId>
-                
-        <version>2.6</version>
-              
+        <version>2.6</version>           
       </dependency>
            
       <dependency>
-                
         <groupId>org.apache.commons</groupId>
-                
         <artifactId>commons-lang3</artifactId>
-                
         <version>3.11</version>
               
       </dependency>
             
       <dependency>
-                
         <groupId>io.springfox</groupId>
-                
         <artifactId>springfox-boot-starter</artifactId>
-                
-        <version>3.0.0</version>
-              
+        <version>3.0.0</version>          
       </dependency>
             
       <dependency>
-                
         <groupId>junit</groupId>
-                
         <artifactId>junit</artifactId>
-                
         <version>4.13.2</version>
-                
         <type>jar</type>
-                
-        <scope>test</scope>
-              
+        <scope>test</scope>             
       </dependency>
             
       <dependency>
-                
         <groupId>com.squareup.okhttp3</groupId>
-                
         <artifactId>mockwebserver</artifactId>
-                
         <version>4.9.3</version>
-                
-        <scope>test</scope>
-              
+        <scope>test</scope>            
       </dependency>
-                        
-    
+      
     </dependencies>
-        
-  
   
   </dependencyManagement>
-    
   
   <modules>
-        
     <module>example-domain</module>
-        
     <module>functional-java</module>
-        
     <module>itunes-library</module>
-        
     <module>twitter-proxy</module>
-        
     <module>mastodon-proxy</module>
-        
     <module>scalatest</module>
-        
     <module>spring-boot-cors</module>
-        
     <module>spring-boot-docker</module>
-        
     <module>spring-boot-dynamodb</module>
-        
     <module>spring-boot-elasticsearch</module>
-        
     <module>spring-boot-elasticsearch-jest</module>
-        
     <module>spring-boot-freemarker</module>
-        
     <module>spring-boot-https</module>
-        
     <module>spring-boot-kafka</module>
-        
     <module>spring-boot-mongodb</module>
-        
     <module>spring-boot-mysql</module>
-        
     <module>spring-boot-rabbitmq</module>
-        
     <module>spring-boot-simple</module>
-        
     <module>spring-webapp-freemarker</module>
-        
     <module>testNG</module>
-        
-    <module>utilities</module>
-      
+    <module>utilities</module>     
   </modules>
-    
 
 </project>
